cmake_minimum_required(VERSION 3.7)
project(SDLTests)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_FLAGS "-I/usr/local/include -lsdl2 -lsdl2_ttf -lsdl2_image -lsdl2_mixer -Wall")

add_executable(KeyImputTests KeyImputTests.c ${SOURCE_FILES})
add_executable(ObjectsInC ObjectsInC.c ${SOURCE_FILES})
add_executable(Test Test.c ${SOURCE_FILES})
add_executable(Animation Animation.c ${SOURCE_FILES} tree.c)
add_executable(Rauschen Rauschen.c ${SOURCE_FILES})
add_executable(MoveObjects MoveObjects.c ${SOURCE_FILES})
add_executable(MoveObjectsBetter MoveObjectsBetter.c ${SOURCE_FILES})
add_executable(Messageboxes Messageboxes.c ${SOURCE_FILES})
add_executable(ShowText ShowText.c ${SOURCE_FILES})
add_executable(playMPThree playMPThree.c ${SOURCE_FILES})
add_executable(PlayWavFile PlayWavFile.c ${SOURCE_FILES})
add_executable(TextInputEvent TextInputEvent.c ${SOURCE_FILES})
add_executable(tree tree.c ${SOURCE_FILES})
add_executable(mandelbroat mandelbroat.c ${SOURCE_FILES})
add_executable(mandelbroat_vs2 mandelbroat_vs2.c ${SOURCE_FILES})
add_executable(times_tables times_tables.c ${SOURCE_FILES})
add_executable(heart heart.c ${SOURCE_FILES})